--- a/DoctorAppointments/Views/Login/Index.cshtml
+++ b/DoctorAppointments/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model DoctorAppointments.Models.Patient
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/ApplicationLayout.cshtml";
@@ -7,14 +8,23 @@
 @Styles.Render("~/Content/signin.css");
 <div class="container">
 
-    <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
+    @using (Html.BeginForm("Login", "Patients", FormMethod.Get))
+            {
+                <span>Username: </span> @Html.TextBoxFor(x => x.username)
+                <span>Password: </span> @Html.TextBoxFor(x => x.password)
+                <input id="Login" type="submit" value="Login" />
+            }
+
+    @*    <form class="form-signin" action="">
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="location.href'@Url.Action("Login", "Patient")'">Log in</button>
+        </form>*@
+
 
 </div>
 
