--- a/DoctorAppointments/Views/Shared/_Layout.cshtml
+++ b/DoctorAppointments/Views/Shared/_Layout.cshtml
@@ -8,30 +8,66 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top ">
+        <!-- -->
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="collapse navbar-collapse ">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <!--<div class="dropdown-toggle" data-toggle="dropdown">@Html.ActionLink("Patients", "", "")</div>-->
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="/">Patients </span></a>
+                         
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Register", "", "")</li>
+                            <li>@Html.ActionLink("Search for appointment", "", "")</li>
+                            <li>@Html.ActionLink("Close an appointment", "", "")</li>
+                            <li>@Html.ActionLink("Delete appointment", "", "")</li>
+                            <li>@Html.ActionLink("My appointment history", "", "")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="/">Doctors</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Select avaliable dates", "", "")</li>
+                            <li>@Html.ActionLink("My appointments", "", "")</li>
+                            <li>@Html.ActionLink("Delete appointment", "", "")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="/">Admins</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Register users", "", "")</li>
+                        </ul>
+                    </li>
+
+                    <!--
+                        <li>@Html.ActionLink("Patients", "", "")</li>
+                        <li>@Html.ActionLink("Doctors", "", "")</li>
+                        <li>@Html.ActionLink("Admins", "", "")</li>-->
+                    <!--<div class="subnav">
+                        <button class="subnavbtn">Patients </button>
+                        <div class="subnav-content">
+                            <li>@Html.ActionLink("Register", "", "")</li>
+                        </div>
+                    </div>
+                    -->
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <!-- <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>-->
         </footer>
     </div>
 
