--- a/DoctorAppointments/Views/Doctors1/Create.cshtml
+++ b/DoctorAppointments/Views/Doctors1/Create.cshtml
@@ -6,11 +6,19 @@
 
 <h2>Create</h2>
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+                    window.onload = function () {
+                        alert("@ViewBag.Message");
+                    };
+    </script>
+}
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Doctor</h4>
         <hr />
