--- a/DoctorAppointments/Views/Shared/_Layout.cshtml
+++ b/DoctorAppointments/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="/">Doctors</a>
 
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Select avaliable dates", "", "")</li>
+                            <li>@Html.ActionLink("Select available dates", "", "")</li>
                             <li>@Html.ActionLink("My appointments", "AppointmentSchedule", "Doctors1")</li>
                             <li>@Html.ActionLink("Delete appointment", "", "")</li>
                         </ul>
