Doctors' appointments' pages.

--- a/DoctorAppointments/Views/Doctors1/Welcome.cshtml
+++ b/DoctorAppointments/Views/Doctors1/Welcome.cshtml
@@ -5,9 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Welcome @ViewBag.Doctor.username</h2>
+@{ 
+    var doctor = new DoctorAppointments.Models.Doctor();
+    doctor = ViewBag.Doctor;
+}
+<h2>Welcome @doctor.username</h2>
 
 
 
-@Html.ActionLink("Register available dates.", "Create", "Appointments")
-
+@Html.ActionLink("Register available dates.", "Create", "Appointments", routeValues: new { doctor = ViewBag.Doctor }, htmlAttributes: null)
+<br />
+@Html.ActionLink("Show today's schedule.", "ShowAppointmentsPerDay", "Doctors1", new {doctor.doctorAMKA}, htmlAttributes: null)
+<br />
+@Html.ActionLink("Show this week's schedule.", "ShowAppointmentsPerWeek", "Doctors1", new { doctor.doctorAMKA}, htmlAttributes: null)
