--- a/DoctorAppointments/Views/Shared/_Layout.cshtml
+++ b/DoctorAppointments/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <li>@Html.ActionLink("Search for appointment", "SearchForDate", "Patients")</li>
                             <li>@Html.ActionLink("Close an appointment", "CloseAppointment", "Patients")</li>
                             <li>@Html.ActionLink("Delete appointment", "CancelAppointments", "Appointments")</li>
-                            <li>@Html.ActionLink("My appointment history", "PrevAppointments", "Appointments")</li>
+                            <li>@Html.ActionLink("My appointment history", "RequestAmka", "Appointments")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
