--- a/DoctorAppointments/Views/Doctors1/ShowAppointmentsPerWeek.cshtml
+++ b/DoctorAppointments/Views/Doctors1/ShowAppointmentsPerWeek.cshtml
@@ -1,11 +1,11 @@
 ﻿@model List<DoctorAppointments.Models.Appointment>
 
 @{
-    ViewBag.Title = "ShowAppointmentsPerWeek";
+    ViewBag.Title = "This Week's Appointmets";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ShowAppointmentsPerWeek</h2>
+<h2>This Week's Appointmets</h2>
 
 <table>
     @foreach (var item in Model)
