--- a/DoctorAppointments/Views/Patients/CloseAppointment.cshtml
+++ b/DoctorAppointments/Views/Patients/CloseAppointment.cshtml
@@ -2,11 +2,12 @@
 @{
     ViewBag.Title = "CloseAppointment";
 }
+@Styles.Render("~/Content/search.css");
 
 <h2>Close/Book Appointment</h2>
 
 
-<form >
+<form>
     <input type="checkbox" checked="checked" id="ddate" value="ddate" class="choice1"> <label class="choices" for="ddate">
         Date Between
     </label>
