--- a/DoctorAppointments/Views/Appointments/Create.cshtml
+++ b/DoctorAppointments/Views/Appointments/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DoctorAppointments.Models.Appointment
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Appointment";
 }
 
-<h2>Create</h2>
+<h2>Create a free slot</h2>
 
 
 @using (Html.BeginForm())
