--- a/DoctorAppointments/Views/Patients/Create.cshtml
+++ b/DoctorAppointments/Views/Patients/Create.cshtml
@@ -4,8 +4,16 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Patient</h2>
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+                    window.onload = function () {
+                        alert("@ViewBag.Message");
+                    };
+    </script>
+}
 
 @using (Html.BeginForm())
 {
