--- a/DoctorAppointments/Views/Shared/_Layout.cshtml
+++ b/DoctorAppointments/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <li>@Html.ActionLink("Select available dates", "Create", "Appointments")</li>
                             <li>@Html.ActionLink("My appointments this week", "RequestAmka2", "Doctors1")</li>
                             <li>@Html.ActionLink("My appointments today", "RequestAmka1", "Doctors1")</li>
-                            <li>@Html.ActionLink("Delete appointment", "CancelAppointmentsDoc", "Appointments")</li>
+                            <li>@Html.ActionLink("Delete appointment", "RequestAmka3", "Doctors1")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
